# Rend

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  crun.sh  notes.txt  temp.rd
docs/: grammar v2.md  syntax.md
src/: ast_builder.cpp  ast_builder.hpp  ast_def.hpp  errors.hpp  hir_def.hpp  hir_generator.cpp  hir_generator.hpp  ir.hpp  lexer.cpp  main.cpp  operator_matrix_index.hpp  operators.hpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp  tokenstream.hpp
src2/: ast_builder.hpp  ast_def.hpp  hir_def.hpp  lexer.hpp  main.cpp  operator_matrix_index.hpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp  tokens.hpp  tokenstream.cpp  type.cpp  type.hpp
